[package]
name = "timewatch"
description = "A terminal based stopwatch with optional messages"
authors = ["Foxicution"]
repository = "https://github.com/Foxicution/timewatch"
keywords = ["terminal", "stopwatch"]
categories = ["command-line-utilities", ]
version = "0.1.1"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
crossterm = "0.29.0"
textwrap = "0.16.2"
